cluster/apps/media/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jellyseerr
